hphp/hack/test/typecheck/using/using_bad_syntax.php.rust_elab.exp
File "using_bad_syntax.php", line 12, characters 9-9:
A left parenthesis `(` is expected here. (Parsing[1002])
File "using_bad_syntax.php", line 12, characters 14-25:
Cannot use `[]` for reading (NastCheck[3047])
File "using_bad_syntax.php", line 12, characters 14-31:
Cannot use `[]` for reading (NastCheck[3047])
File "using_bad_syntax.php", line 12, characters 18-23:
Disposable objects may only be created in a `using` statement or `return` from function marked `<<__ReturnDisposable>>` (Typing[4187])
